--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,13 @@ body {
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
+.btn {
+  display: block;
+  width: 100px;
+  height: 50px;
+  padding: 5px 15px;
+  font-size: 20px;
+  border-radius: 15px;
+  background-color: rgb(84, 167, 167);
+  color: white;
+}
